# SRMP-JMAG

./: main.ipynb  main.py  pipeline.py  pyproject.toml
